fixed header and whitespace issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 
 body {
   /* overflow-y: scroll; */
-  padding: 0;
+  padding: 10px;
   margin: 0;
   background-color: #f1f1f1;
   font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +15,7 @@ body {
   text-decoration: none;
   background-image: url("../img/qbkls.png");
   background-size: auto;
-  padding-bottom: none;
+  padding-bottom: 175px;
   line-height: 20px;
 }
 
@@ -46,6 +46,7 @@ a:active {
 
 /* Nav Styles */
 #nav {
+  clear: both;
   background-color: #222;
   position: fixed;
   width: 100%;
@@ -137,18 +138,22 @@ a:active {
 /* Main Content Style */
 
 #wrapper {
+  padding-top: 200px;
   width: 960px;
   margin: 0 auto 0 auto;
   text-align: left;
-  margin-bottom: 5%;
-  margin-top: 30px;
+  min-height: 65%;
+
+  /* margin-bottom: 5%;
+  margin-top: 30px; */
 }
 
 #content {
   background-color: #fff;
   border: 3px solid #ddd;
   padding: 20px;
-  margin: 200px 0 auto 0;
+  position: inherit;
+  /* margin: 200px 0 auto 0; */
   /* height: 100%; */
 }
 .portrait {
@@ -188,7 +193,7 @@ a:active {
   width: 100%;
   bottom: 0;
   padding: 0.25rem;
-  height: 200px;
+  height: 175px;
 }
 
 #social-icons {
